syntax = "proto3";

package AuctionSystem;

option go_package = "grpc/proto";

message bidAmount {
    string bidderId = 1;
    int64 amount = 2;
}

message bidSuccess {
    string successMessage = 1;
}

message resultRequest {

}

message result {
    string bidderId = 1;
    int64 amount = 2;
}

message requestState {
    int64 ownId = 1;
}

message sendState {
    string bidderId = 1;
    int64 amount = 2;
    string successMessage = 3;
    string backupIds = 4;
}

message register {
    string backupId = 1;
}

message registered {
    string backupId = 1;
}

message registerRequest {
    string backupId = 1;
}

service Auction {
    rpc Bidding(bidAmount) returns (bidSuccess); //simple rpc
    rpc AskForResult(resultRequest) returns (result); //simple rpc
    rpc AskForUpdate(stream requestState) returns (stream sendState); //simple rpc between primary and backup replica
    rpc RegisterBackup(registerRequest) returns (registered);
}

